# alphastream

./: .env.backup.20260303_182114  .env.backup.20260303_183320  .env.example  .gitignore  PRD.md  README.md  docker-compose.dev.yml  docker-compose.infra.yml  docker-compose.yml
.github/workflows/: ci.yml
.opencode/plans/: article-reanalysis-implementation.md
alphastream-india/: README.md  docker-compose.yml
alphastream-india/backend/: .env.example  pyproject.toml
alphastream-india/backend/app/: main.py
alphastream-india/backend/app/core/: config.py  logging.py  security.py
alphastream-india/frontend/: package.json
alphastream-india/frontend/app/: globals.css  layout.tsx  page.tsx
alphastream-india/frontend/types/: index.ts
alphastream-india/pipelines/: .env.example  config.py  metrics.py  pyproject.toml  tasks.py
alphastream-india/pipelines/llm/: analysis.py
alphastream-india/pipelines/ml/: sentiment.py
alphastream-india/pipelines/scrapers/: news.py
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  news.py  portfolio.py  research.py  research_debug.py  router.py  sentiment.py  stocks.py  websocket.py
backend/app/api/v1/endpoints/: google_news.py
backend/app/core/: exceptions.py  oauth.py  security.py
backend/app/models/: __init__.py  news.py  portfolio.py  sentiment.py  stock.py  user.py
backend/app/schemas/: news.py  portfolio.py  sentiment.py  stock.py  user.py
backend/app/services/: auth_service.py  news_service.py  portfolio_service.py  reanalysis_status.py  research_service.py  stock_service.py  websocket_manager.py
backend/app/tests/: conftest.py  test_auth.py  test_exceptions.py  test_health.py  test_news.py  test_portfolio.py  test_research.py  test_security.py  test_sentiment.py  test_stock_service.py  test_stocks.py
backend/scripts/: seed_stocks.py
frontend/: .dockerignore  .gitattributes  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/: auth.ts  middleware.ts
frontend/src/__tests__/: setup.ts
frontend/src/__tests__/app/: news-research-results-page.test.tsx  news-research-status-page.test.tsx
frontend/src/__tests__/components/: research-toggle.test.tsx  sentiment-badge.test.tsx  topic-research-button.test.tsx
frontend/src/app/: layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/news/: layout.tsx  page.tsx
frontend/src/app/portfolio/: layout.tsx  page.tsx
frontend/src/app/stocks/: layout.tsx  page.tsx
frontend/src/components/dashboard/: alpha-metrics.tsx  live-feed.tsx  sector-heatmap.tsx  sentiment-chart.tsx  topic-overview.tsx
frontend/src/components/layout/: navbar.tsx  sidebar.tsx
frontend/src/hooks/: use-websocket.ts
frontend/src/providers/: auth-provider.tsx  websocket-provider.tsx
frontend/src/types/: api.ts  news.ts  sentiment.ts  stock.ts
nginx/: nginx.conf
pipeline/: .dockerignore  Dockerfile  pyproject.toml
pipeline/pipeline/: celery_app.py  config.py  database.py
pipeline/pipeline/alpha/: composite_signal.py  divergence.py  expectation_gap.py  narrative_velocity.py
pipeline/pipeline/llm/: gemini_client.py  openrouter_client.py  prompts.py  rate_limiter.py
pipeline/pipeline/ml/: embeddings.py  finbert.py  ner.py  ticker_resolver.py
pipeline/pipeline/scrapers/: __init__.py  article_scraper.py  browseai_client.py  firecrawl_client.py  google_news.py  reddit_client.py  rss_feeds.py  thunderbit_client.py  twitter_client.py
pipeline/pipeline/tasks/: alpha_metrics.py  extensive_research.py  google_news_scraper.py  prioritized_analysis.py  reddit_scraper.py  rss_ingestion.py  sentiment_analysis.py  ticker_identification.py  twitter_scraper.py  web_scraper.py
pipeline/pipeline/utils/: deduplication.py  indian_market.py  publisher.py  text_cleaner.py
pipeline/scripts/: seed_pipeline.py  test_research_manual.py
pipeline/tests/: conftest.py  test_alpha.py  test_deep_research_debug.py  test_llm.py  test_ml.py  test_scrapers.py  test_tasks.py  test_utils.py
plans/: implementation_plan.md
postgres/: pg_hba.conf  postgres.conf
scripts/: deploy-backend-only.sh  deploy-production.sh  seed-data.sh  setup.sh  start-docker.sh  start-local.sh  stop-backend-only.sh  stop-docker.sh  stop-local.sh  stop-production.sh
(+22 files in other folders)
