[project]
name = "alphastream-backend"
version = "0.1.0"
description = "AlphaStream India - FastAPI Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.131.0",
    "uvicorn[standard]>=0.41.0",
    "sqlalchemy[asyncio]>=2.0.46,<2.1",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "PyJWT>=2.10.0",
    "bcrypt>=4.2.0",
    "authlib>=1.6.8",
    "httpx>=0.28.1",
    "redis[hiredis]>=7.2.0",
    "python-multipart>=0.0.18",
    "email-validator>=2.2.0",
    "celery>=5.6.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
    "ruff>=0.8.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
