[project]
name = "alphastream-pipelines"
version = "0.1.0"
description = "AlphaStream India - Data Processing Pipelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.10",
    "scrapy>=2.11.0",
    "selenium>=4.15.0",
    "playwright>=1.40.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "langchain>=0.1.0",
    "langchain-google-genai>=0.0.6",
    "openai>=1.3.0",
    "google-generativeai>=0.3.0",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
